--- a/application/layouts/scripts/partials/menus/page_tools.phtml
+++ b/application/layouts/scripts/partials/menus/page_tools.phtml
@@ -1,4 +1,4 @@
-<nav id="right-nav" class="dropdown-menu fixed-nav poped-in">
+<nav id="actions-menu" class="well fixed-nav poped-in">
   <ul class="nav nav-list">
     <li class="nav-header">Actions</li>
     <li>
