Uploading to user as default and made a basic plugin out of the uploading scripts

--- a/application/views/scripts/file/upload.phtml
+++ b/application/views/scripts/file/upload.phtml
@@ -6,7 +6,7 @@
 <div class="modal hide" id="file-data" data-backdrop="static">
   <div class="modal-header">
     <button class="close modal-close" data-dismiss="modal">×</button>
-    <h3><?php echo $this->translate('File information'); ?></h3>
+    <h3><?php echo $this->translate('File information'); ?><span class="count"></span></h3>
   </div>
   <div class="modal-body">
     <dl>
