Changes to js files

--- a/application/layouts/scripts/partials/footer.phtml
+++ b/application/layouts/scripts/partials/footer.phtml
@@ -15,6 +15,7 @@
     <script defer src="<?php echo $this->baseUrl('/js/libs/jquery.lightbox-0.5.min.js'); ?>"></script>
     <script defer src="<?php echo $this->baseUrl('/js/libs/bootstrap.min.js'); ?>"></script>
     <script defer src="<?php echo $this->baseUrl('/js/libs/chosen.jquery.min.js'); ?>"></script>
+    <script defer src="<?php echo $this->baseUrl('/js/libs/jquery.ba-hashchange.js'); ?>"></script>
     <script defer src="<?php echo $this->baseUrl('/js/libs/plupload/js/plupload.full.js'); ?>"></script>
     <script defer src="<?php echo $this->baseUrl('/js/libs/plupload/js/jquery.plupload.queue/jquery.plupload.queue.js'); ?>"></script>
     
@@ -29,8 +30,5 @@
     <script defer src="<?php echo $this->baseUrl('/js/plugins.js'); ?>"></script>
     <?php //all other small scripts can be put here ?>
     <script defer src="<?php echo $this->baseUrl('/js/script.js'); ?>"></script>
-    
-    <?php // @todo: this needs to be turned into a plugin and put into plugins.js ?>
-    <script defer src="<?php echo $this->baseUrl('/js/contextmenu.js'); ?>"></script>
 </body>
 </html>
