--- a/application/layouts/scripts/partials/header.phtml
+++ b/application/layouts/scripts/partials/header.phtml
@@ -25,7 +25,7 @@
     <!--[if lt IE 8]><div class="alert-danger top-alert"><div class="alert alert-danger"><p><?php echo $this->translate('Your browser is');?><em> <?php echo $this->translate('ancient!'); ?></em> <a href="http://browsehappy.com/"><?php echo $this->translate('Upgrade to a different browser'); ?></a> <?php echo $this->translate('or'); ?> <a href="http://www.google.com/chromeframe/?redirect=true"><?php echo $this->translate('install Google Chrome Frame'); ?></a> <?php echo $this->translate('to experience this site.'); ?></p></div></div><![endif]-->
     <header role="toolbar">
       <div class="content clearfix">
-        <?php if(Zend_Auth::getInstance()->hasIdentity() && $this->me): ?>
+        <?php if(Zend_Auth::getInstance()->hasIdentity() && $this->me && $this->me->getUsername() !== 'guest'): ?>
           <div class="user-box">
             <img class="avatar" src="<?php echo $this->me->getAvatar(); ?>" />
             <div class="dropdown-button hoverable user-menu">
@@ -37,6 +37,13 @@
               </ul>
             </div>
           </div>
+        <?php else: ?>
+          <div class="login-register-box">
+            <a href="<?php echo $this->baseUrl('user/register'); ?>"><?php echo $this->translate("Register now"); ?></a>
+            <span><?php echo $this->translate('or') . ' '; ?></span>
+            <a href="<?php echo $this->baseUrl('auth/login'); ?>"><?php echo $this->translate("login"); ?></a>
+          </div>
+        <?php endif; ?>
           <div class="case-settings-box clearfix">
             <?php
             $currentLabel = '';
@@ -59,13 +66,6 @@
               <button class="button">Ok</button>  
             </form>
           </div>
-        <?php else: ?>
-          <div class="login-register-box">
-            <a href="<?php echo $this->baseUrl('user/register'); ?>"><?php echo $this->translate("Register now"); ?></a>
-            <span><?php echo $this->translate('or') . ' '; ?></span>
-            <a href="<?php echo $this->baseUrl('auth/login'); ?>"><?php echo $this->translate("login"); ?></a>
-          </div>
-        <?php endif; ?>
       </div>
     </header>
     <div class="pagewrap">
