--- a/application/views/scripts/permission/edit.phtml
+++ b/application/views/scripts/permission/edit.phtml
@@ -17,4 +17,5 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 ?>
+<h3><?php echo $this->subtitle; ?></h3>
 <?php echo $this->modifyForm; ?>
