--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -2067,20 +2067,30 @@ li.plupload_droptext {
 }
 
 .btn.btn-checkbox {
-  margin-right: 20px;
+  margin-right: 5px;
 }
 
-.users-wrapper {
+.users-wrapper,
+.collaborators-wrapper,
+.permissions-wrapper{
   width: 90%;
   max-width: 462px;
 }
+.permissions-wrapper i,
+.collaborators-wrapper i,
 .users-wrapper i {
   margin-right: 0;
+}
+.collaborators-wrapper .options,
+.permissions-wrapper .options {
+  padding: 6px 0 0 70px;
 }
 .users-wrapper .options {
   float: right;
   padding-top: 6px;
 }
+.collaborators-wrapper .well,
+.permissions-wrapper .well,
 .users-wrapper .well {
   padding: 5px;
   clear: both;
@@ -2088,19 +2098,29 @@ li.plupload_droptext {
   margin-bottom: 4px;
   border: 1px transparent solid;
 }
-
+.collaborators-wrapper .well,
+.permissions-wrapper .well {
+  height: 56px;
+}
+.collaborators-wrapper .well img,
+.permissions-wrapper .well img,
 .users-wrapper .well img {
   float: left;
 }
-
+.collaborators-wrapper .well .names,
+.permissions-wrapper .well .names {
+    padding: 3px 0 0 70px;
+}
 .users-wrapper .well .names {
   padding: 3px 0 0 5px;
   float: left;
 }
-
+.collaborators-wrapper .well span,
+.permissions-wrapper .well span,
 .users-wrapper .well span {
   display: block;
 }
+
 .users-wrapper .well span.realname {
   font-style: italic;
 }
@@ -2165,6 +2185,10 @@ li.plupload_droptext {
   .user-box {
     position: absolute;
     bottom: 0;
+  }
+  
+  .float-right {
+    float: right;
   }
 }
 
