--- a/application/views/scripts/document/page/show.phtml
+++ b/application/views/scripts/document/page/show.phtml
@@ -1,15 +1,22 @@
 <?php $this->headTitle($this->title); ?>
 <h3><?php echo $this->subtitle; ?> <small>Show</small></h3>
 
+<?php if($this->case->getTarget() && $this->page->getDocument()->getId() == $this->case->getTarget()->getId()): ?>
+<p class="pagination-right switch-two-columns">
+  <a href="/document_page/fragment/id/<?php echo $this->page->getId(); ?>" class="btn"><i class="icon-ok-circle"></i>Switch to two column view for fragment creation</a>
+</p>
+<?php endif; ?>
+
 <div class="document-page src-wrapper show-contextmenu">
   <?php echo $this->page->getContent('list'); ?>
 </div>
 
 <?php echo $this->partial('partials/next-prev-paginator.phtml', array('prevLink'=>$this->prevPageLink, 'nextLink'=>$this->nextPageLink)); ?>
 
-<?php // @todo: think about a better way to open a new page with post data in jquery ?>
+<?php if($this->case->getTarget() && $this->page->getDocument()->getId() == $this->case->getTarget()->getId()): ?>
 <form method="post" action="/document_fragment/create" id="fragment-create">
   <input type="hidden" name="candidatePage" value="<?php echo $this->page->getId(); ?>" id="fragment-page" />
   <input type="hidden" name="candidateStartLine" id="fragment-candidate-start-line" />
   <input type="hidden" name="candidateEndLine" id="fragment-candidate-end-line" />
 </form>
+<?php endif; ?>
