--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -2354,3 +2354,7 @@ li.plupload_droptext {
 
 @media (max-width:767px){body{padding-left:0;padding-right:0;}}
 
+/*style for bibtex information of a defined document*/
+td.bibtex{
+	font-weight:bold;
+}
