--- a/application/layouts/scripts/partials/footer.phtml
+++ b/application/layouts/scripts/partials/footer.phtml
@@ -1,5 +1,5 @@
       <footer role="contentinfo">
-        <a href=""><?php echo $this->translate('Imprint'); ?></a>
+        <a href="<?php echo $this->baseUrl('imprint'); ?>"><?php echo $this->translate('Imprint'); ?></a>
       </footer>
     </div>    
     
@@ -8,27 +8,27 @@
      //plugins from other vendors should be put here
      //@todo add automatic minification of scripts later on
     ?>
-    <script defer src="<?php echo $this->baseUrl('/js/libs/jquery-ui-1.8.17.custom.min.js'); ?>"></script>
-    <script defer src="<?php echo $this->baseUrl('/js/libs/numberfy.js'); ?>"></script>
-    <!--<script defer src="<?php echo $this->baseUrl('/js/libs/jquery.autosize.js'); ?>"></script>-->
-    <script defer src="<?php echo $this->baseUrl('/js/libs/jquery.lightbox-0.5.min.js'); ?>"></script>
-    <script defer src="<?php echo $this->baseUrl('/js/libs/bootstrap.min.js'); ?>"></script>
-    <script defer src="<?php echo $this->baseUrl('/js/libs/chosen.jquery.min.js'); ?>"></script>
-    <script defer src="<?php echo $this->baseUrl('/js/libs/jquery.ba-hashchange.js'); ?>"></script>
-    <script defer src="<?php echo $this->baseUrl('/js/libs/plupload/js/plupload.full.js'); ?>"></script>
-    <script defer src="<?php echo $this->baseUrl('/js/libs/plupload/js/jquery.plupload.queue/jquery.plupload.queue.js'); ?>"></script>
-    <script defer src="<?php echo $this->baseUrl('/js/libs/i18next-1.3.3.min.js'); ?>"></script>
+    <script defer src="<?php echo $this->baseUrl('js/libs/jquery-ui-1.8.17.custom.min.js'); ?>"></script>
+    <script defer src="<?php echo $this->baseUrl('js/libs/numberfy.js'); ?>"></script>
+    <!--<script defer src="<?php echo $this->baseUrl('js/libs/jquery.autosize.js'); ?>"></script>-->
+    <script defer src="<?php echo $this->baseUrl('js/libs/jquery.lightbox-0.5.min.js'); ?>"></script>
+    <script defer src="<?php echo $this->baseUrl('js/libs/bootstrap.min.js'); ?>"></script>
+    <script defer src="<?php echo $this->baseUrl('js/libs/chosen.jquery.min.js'); ?>"></script>
+    <script defer src="<?php echo $this->baseUrl('js/libs/jquery.ba-hashchange.js'); ?>"></script>
+    <script defer src="<?php echo $this->baseUrl('js/libs/plupload/js/plupload.full.js'); ?>"></script>
+    <script defer src="<?php echo $this->baseUrl('js/libs/plupload/js/jquery.plupload.queue/jquery.plupload.queue.js'); ?>"></script>
+    <script defer src="<?php echo $this->baseUrl('js/libs/i18next-1.3.3.min.js'); ?>"></script>
     
     <?php //Language files for plupload ?>
     <?php $languageString = Zend_Registry::getInstance()->Zend_Locale->getLanguage(); ?>
-    <?php $pluploadTranslationPath = '/js/libs/plupload/js/i18n/' . $languageString . '.js'; ?>
+    <?php $pluploadTranslationPath = 'js/libs/plupload/js/i18n/' . $languageString . '.js'; ?>
     <?php if(file_exists(BASE_PATH . DIRECTORY_SEPARATOR . 'public' . $pluploadTranslationPath)): ?>
     <script defer src="<?php echo $this->baseUrl($pluploadTranslationPath); ?>"></script>
     <?php endif; ?>
     
     <?php //own plugins go here ?>
-    <script defer src="<?php echo $this->baseUrl('/js/plugins.js'); ?>"></script>
+    <script defer src="<?php echo $this->baseUrl('js/plugins.js'); ?>"></script>
     <?php //all other small scripts can be put here ?>
-    <script defer src="<?php echo $this->baseUrl('/js/script.js'); ?>"></script>
+    <script defer src="<?php echo $this->baseUrl('js/script.js'); ?>"></script>
 </body>
 </html>
