--- a/application/layouts/scripts/partials/footer.phtml
+++ b/application/layouts/scripts/partials/footer.phtml
@@ -3,6 +3,8 @@
       </footer>
     </div>    
     
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="<?php echo $this->baseUrl('/js/libs/jquery-1.7.2.min.js'); ?>"><\/script>')</script>
     
     <?php 
      //plugins from other vendors should be put here
