--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,10 +1,11 @@
 <?php
 $defaultConfig = Zend_Registry::getInstance()->config->default;
 $applicationName = $defaultConfig->applicationName;
-$this->title = $this->translate('Welcome to %s', $applicationName) . '.';
+$this->title = $this->translate('Welcome to %s', $applicationName);
 $this->headTitle($this->title);
 ?>
 <div class="welcome-message well"><?php echo $this->translate($defaultConfig->welcomeMessage); ?></div>
-
-<?php echo $this->currentCase; ?>
-<?php echo $this->barcode; ?>
+<?php var_dump($this->barcodes); ?>
+<?php foreach($this->barcodes as $barcode): ?>
+  <?php echo $barcode ?>
+<?php endforeach; ?>
